--- a/Styles.css
+++ b/Styles.css
@@ -114,14 +114,14 @@ p,h1,h2,h3,h4,h5,h6,a,li{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
-.img-head .container{
+.img-head .content{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-.img-head .container h1{
+.img-head .content h1{
     color:#152031;
     font-size: 50px;
     width: 500px;
@@ -133,7 +133,7 @@ p,h1,h2,h3,h4,h5,h6,a,li{
     font-weight: 300;
     padding: 5px 0;
 }
-.img-head .container .service_app button{
+.img-head .content .service_app button{
     width: 150px;
     height: 40px;
     background: #02AA8B;
@@ -153,14 +153,14 @@ p,h1,h2,h3,h4,h5,h6,a,li{
     width: 500px;
     margin: auto;
 }
-.img-head .container .service_app{
+.img-head .content .service_app{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 300px;
     margin-top: 25px;
 }
-.img-head .container .service_app i{
+.img-head .content .service_app i{
     color: #02AA8B;
     font-size: 25px;
 }
@@ -335,58 +335,56 @@ footer .content .copyright p{
     .moon{
         padding: 0 25px;
     }
+    .img-head .img img{
+        width: 350px;
+    }
+    .img-head .content h1{
+        font-size: 35px;
+        width: 70%;
+    }
+    .img-head .content p{
+        font-size: 15px;
+        width: 90%;
+    }
 }
 @media screen and (max-width:900px){
-    .steps .container .step{
-        grid-column-start: span 2;
+    .AboutUs .content{
+        grid-template-columns: repeat(1, 1fr);
     }
-    .steps .container .step_1 .inform_step{
-        width: 100%;
-        text-align: center;
-        margin: 15px 0;
-    }
-    .steps .container .step_1 .inform_step h5{
-        width: 80%;
-        margin: auto;
-        text-align: center;
-    }
-    .steps .container .step_2{
-        width: 80%;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-    }
-    .steps .container .step_3{
-        width: 80%;
-    }
-    .inform_step{
-        padding: 0 15px;
+    .AboutUs .content p{
+        padding: 0 0 40px 0;
+        font-size: 17px;
     }
 }
+
 @media screen and (max-width:750px){
-    .important .container .imports{
-        grid-column-start: span 2;
-        padding-bottom: 40px;
+    .services .content{
+        grid-template-columns: repeat(1,1fr);
     }
-    .important .container .img-import{
-        grid-column-start: span 2;
+    .offers .time_offers {
+        grid-template-columns: repeat(1,1fr);
     }
-    .about .description{
-        width: 450px;
-    }
-    .about .container .mision, .about .container .vision{
+    .offers .time_offers .month{
         margin: 25px auto;
-        grid-column-start: span 2;
     }
-    .services .container .customers, .services .container .business{
-        margin: 25px auto;
-        grid-column-start: span 2;
+    footer .content{
+        grid-template-columns: repeat(1, 1fr);
     }
-    .img-head .container h1{
-        font-size: 40px;
+    footer .content .social_media{
+        justify-content: center;
+        padding: 25px 0;
     }
-    .img-head .container p{
-        font-size: 14px;
+    footer .content .img{
+        justify-content: center;
+    }
+    .img-head{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .img-head .content {
+        padding: 40px 0;
+    }
+    .img-head .content h1, .img-head .content p{
+        text-align: center;
     }
 }
 @media screen and (max-width:450px){
