--- a/css.css
+++ b/css.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
+.video iframe{
+    width: 100%;
+    margin: 25px 0;
+    border-radius: 15px;
+    padding: 0 80px;
+}
 *{
     box-sizing: border-box;
     margin: 0;
